# Eve-Log-Scripts

./: Cargo.toml
.github/workflows/: build-executables.yml
src/: engine.rs  main.rs  ui.rs
src/scripts/: combat_notifier.rs  decloak_notifier.rs  friendly_activation.rs  log_printer.rs  mentioned_notifier.rs  mining_notifier.rs  mod.rs  notification.rs  util.rs
