[package]
name = "eve-log-scripts"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dirs = "6.0.0"
eframe = {version = "0.33.3", features = ["persistence"]}
egui = {version = "0.33.3", features = ["persistence"]}
lazy_static = "1.5.0"
notify = "8.2.0"
regex = "1.12.3"
rfd = "0.17.2"
rodio = "0.22.2"
serde = "1.0.228"
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
